bpo-27334: sqlite3 context manager now rolls back if commit fails

Co-authored-by: Luca Citi
Co-authored-by: Berker Peksag <berker.peksag@gmail.com>